--- a/Job_attrition_nb.Rmd
+++ b/Job_attrition_nb.Rmd
@@ -3,6 +3,7 @@ title: "R Notebook"
 output: html_notebook
 ---
 # **Chapter 5 Logistic Regression**
+**5.1 Prerequisites**
 ```{r}
 # Helper packages
 library(dplyr)     # for data wrangling
@@ -16,50 +17,198 @@ library(caret)     # for logistic regression modeling
 library(vip)       # variable importance
 ```
 
+An unordered factor is what is often called categorical data, it does not have a natural order. To represent this in R you can use an unordered factor: is.ordered(f)
+f <- factor(c(1,3,2,1,3))
+f
+[1] 1 3 2 1 3
+Levels: 1 2 3
+
+is.ordered(f)
+[1] FALSE
+
+If the factors have a natural ordering, often called ordinal or ordered categorical data, you can define this in R using an ordered factor. Note the < sign in the levels of an ordered factor.
+
+f <- factor(c(1,3,2,1,3), ordered=TRUE)
+f
+[1] 1 3 2 1 3
+Levels: 1 < 2 < 3
+
+is.ordered(f)
+[1] TRUE
+```{r}
+library(modeldata) # data for some ML model
+data("attrition")
+# mutate_if() is particularly useful for transforming variables from
+# one type to another
+df <- attrition %>% mutate_if(is.ordered, factor, ordered = FALSE)
+
+# Create training (70%) and test (30%) sets for the 
+# rsample::attrition data.
+set.seed(123)  # for reproducibility
+churn_split <- initial_split(df, prop = .7, strata = "Attrition")
+churn_train <- training(churn_split)
+churn_test  <- testing(churn_split)
+```
+#**5.3 Simple logistic regression**
+
+We will fit two logistic regression models in order to predict the probability of an employee attriting. The first predicts the probability of attrition based on their monthly income (MonthlyIncome) and the second is based on whether or not the employee works overtime (OverTime). The glm() function fits generalized linear models, a class of models that includes both logistic regression and simple linear regression as special cases. The syntax of the glm() function is similar to that of lm(), except that we must pass the argument family = "binomial" in order to tell R to run a logistic regression rather than some other type of generalized linear model (the default is family = "gaussian", which is equivalent to ordinary linear regression assuming normally distributed errors).
 
 ```{r}
+model1 <- glm(Attrition ~ MonthlyIncome, family = "binomial", data = churn_train)
+model2 <- glm(Attrition ~ OverTime, family = "binomial", data = churn_train)
+```
+
+For model1, the estimated coefficient for MonthlyIncome is  B1=-0.000130, which is negative, indicating that an increase in MonthlyIncome is associated with a decrease in the probability of attrition. Similarly, for model2, employees who work OverTime are associated with an increased probability of attrition compared to those that do not work OverTime.
+```{r}
+tidy(model1)
+tidy(model2)
+```
+
+As discussed earlier, it is easier to interpret the coefficients using an  
+exp() transformation:
+
+```{r}
+exp(coef(model1))
+exp(coef(model2))
+```
+
+Many aspects of the logistic regression output are similar to those discussed for linear regression. For example, we can use the estimated standard errors to get confidence intervals as we did for linear regression in Chapter 4:
+```{r}
+confint(model1)
+confint(model2)
+```
+#**5.4 Multiple logistic regression**
+
+```{r}
+model3 <- glm(
+  Attrition ~ MonthlyIncome + OverTime,
+  family = "binomial", 
+  data = churn_train
+  )
+
+tidy(model3)
+```
+
+#**5.5 Assessing model accuracy**
+With a basic understanding of logistic regression under our belt, similar to linear regression our concern now shifts to how well do our models predict. As in the last chapter, we’ll use caret::train() and fit three 10-fold cross validated logistic regression models. Extracting the accuracy measures (in this case, classification accuracy), we see that both cv_model1 and cv_model2 had an average accuracy of 83.88%. However, cv_model3 which used all predictor variables in our data achieved an average accuracy rate of 87.58%.
+```{r}
+set.seed(123)
+cv_model1 <- train(
+  Attrition ~ MonthlyIncome, 
+  data = churn_train, 
+  method = "glm",
+  family = "binomial",
+  trControl = trainControl(method = "cv", number = 10)
+)
+
+set.seed(123)
+cv_model2 <- train(
+  Attrition ~ MonthlyIncome + OverTime, 
+  data = churn_train, 
+  method = "glm",
+  family = "binomial",
+  trControl = trainControl(method = "cv", number = 10)
+)
+
+set.seed(123)
+cv_model3 <- train(
+  Attrition ~ ., 
+  data = churn_train, 
+  method = "glm",
+  family = "binomial",
+  trControl = trainControl(method = "cv", number = 10)
+)
+
+# extract out of sample performance measures
+summary(
+  resamples(
+    list(
+      model1 = cv_model1, 
+      model2 = cv_model2, 
+      model3 = cv_model3
+    )
+  )
+)$statistics$Accuracy
 ```
 
 
 ```{r}
+# predict class
+pred_class <- predict(cv_model3, churn_train)
+
+# create confusion matrix
+confusionMatrix(
+  data = relevel(pred_class, ref = "Yes"), 
+  reference = relevel(churn_train$Attrition, ref = "Yes")
+)
 ```
+One thing to point out, in the confusion matrix above you will note the metric No Information Rate: 0.839. This represents the ratio of non-attrition vs. attrition in our training data (table(churn_train$Attrition) %>% prop.table()). Consequently, if we simply predicted "No" for every employee we would still get an accuracy rate of 83.9%. Therefore, our goal is to maximize our accuracy rate over and above this no information baseline while also trying to balance sensitivity and specificity. To that end, we plot the ROC curve (section 2.6) which is displayed in Figure 5.4. If we compare our simple model (cv_model1) to our full model (cv_model3), we see the lift achieved with the more accurate model.
+
+```{r}
+#install.packages("ROCR")
+library(ROCR)
+
+# Compute predicted probabilities
+m1_prob <- predict(cv_model1, churn_train, type = "prob")$Yes
+m3_prob <- predict(cv_model3, churn_train, type = "prob")$Yes
+
+# Compute AUC metrics for cv_model1 and cv_model3
+perf1 <- prediction(m1_prob, churn_train$Attrition) %>%
+  performance(measure = "tpr", x.measure = "fpr")
+perf2 <- prediction(m3_prob, churn_train$Attrition) %>%
+  performance(measure = "tpr", x.measure = "fpr")
+
+# Plot ROC curves for cv_model1 and cv_model3
+plot(perf1, col = "black", lty = 2)
+plot(perf2, add = TRUE, col = "blue")
+legend(0.8, 0.2, legend = c("cv_model1", "cv_model3"),
+       col = c("black", "blue"), lty = 2:1, cex = 0.6)
+```
+Similar to linear regression, we can perform a PLS logistic regression to assess if reducing the dimension of our numeric predictors helps to improve accuracy. There are 16 numeric features in our data set so the following code performs a 10-fold cross-validated PLS model while tuning the number of principal components to use from 1–16. The optimal model uses 14 principal components, which is not reducing the dimension by much. However, the mean accuracy of 0.876 is no better than the average CV accuracy of cv_model3 (0.876).
+
+PLS was originally designed to be used for continuous features. Although you are not restricted from using PLS on categorical features, it is commonly advised to start with numeric features and explore alternative options for categorical features (i.e. ordinal encode, label encode, factor analysis.
 
 
 ```{r}
-```
+# Perform 10-fold CV on a PLS model tuning the number of PCs to 
+# use as predictors
+set.seed(123)
+cv_model_pls <- train(
+  Attrition ~ ., 
+  data = churn_train, 
+  method = "pls",
+  family = "binomial",
+  trControl = trainControl(method = "cv", number = 5),
+  preProcess = c("zv", "center", "scale"),
+  tuneLength = 16
+)
 
+# Model with lowest RMSE
+cv_model_pls$bestTune
+##    ncomp
+## 14    14
+
+# results for model with lowest loss
+cv_model_pls$results %>%
+  dplyr::filter(ncomp == pull(cv_model_pls$bestTune))
+##   ncomp  Accuracy     Kappa AccuracySD   KappaSD
+## 1    14 0.8757518 0.3766944 0.01919777 0.1142592
+
+# Plot cross-validated RMSE
+ggplot(cv_model_pls)
+```
+#**5.7 Feature interpretation**
+
+Similar to linear regression, once our preferred logistic regression model is identified, we need to interpret how the features are influencing the results. As with normal linear regression models, variable importance for logistic regression models can be computed using the absolute value of the  
+z
+ -statistic for each coefficient (albeit with the same issues previously discussed). Using vip::vip() we can extract our top 20 influential variables. Figure 5.6 illustrates that OverTime is the most influential followed by JobSatisfaction, and EnvironmentSatisfaction.
 
 ```{r}
+vip(cv_model3, num_features = 20)
 ```
+#**5.8 Final thoughts**
 
-
-```{r}
-```
-
-
-```{r}
-```
-
-
-```{r}
-```
-
-
-```{r}
-```
-
-
-```{r}
-```
-
-
-```{r}
-```
-
-
-```{r}
-```
-
+Logistic regression provides an alternative to linear regression for binary classification problems. However, similar to linear regression, logistic regression suffers from the many assumptions involved in the algorithm (i.e. linear relationship of the coefficient, multicollinearity). Moreover, often we have more than two classes to predict which is commonly referred to as multinomial classification. Although multinomial extensions of logistic regression exist, the assumptions made only increase and, often, the stability of the coefficient estimates (and therefore the accuracy) decrease. Future chapters will discuss more advanced algorithms that provide a more natural and trustworthy approach to binary and multinomial classification prediction.
 
 ```{r}
 ```
